--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,20 @@
 {
-  "rewrites": [
+  "routes": [
     {
-      "source": "/(.*)",
-      "destination": "/"
+      "src": "/",
+      "dest": "/"
+    },
+    {
+      "src": "/add-points",
+      "dest": "/add-points"
+    },
+    {
+      "src": "/redeem-points",
+      "dest": "/redeem-points"
+    },
+    {
+      "src": "/donate",
+      "dest": "/donate"
     }
   ]
 }
