--- a/vercel.json
+++ b/vercel.json
@@ -1,20 +1,3 @@
 {
-  "routes": [
-    {
-      "src": "/",
-      "dest": "/"
-    },
-    {
-      "src": "/add-points",
-      "dest": "/"
-    },
-    {
-      "src": "/redeem-points",
-      "dest": "/"
-    },
-    {
-      "src": "/donate",
-      "dest": "/"
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
